--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 clientID = 413059473541-q523ckl0mecj5asuj95mcjkqvgd5lnrk.apps.googleusercontent.com
 clientSecret = QaYe6Evy4-Bj7S8kkvSP9IcL
-callbackURL = http://localhost:8000/auth/google/callback
+callbackURL = https://dogeclicker.herokuapp.com/auth/google/callback
 DB_USER = User
 DB_PASSWORD = damian123
